[gd_scene load_steps=25 format=3 uid="uid://cikwbm6f8snq0"]

[ext_resource type="Script" path="res://scripts/PlayerEngine.gd" id="1_4mqlj"]
[ext_resource type="Texture2D" uid="uid://wwkihits853p" path="res://art/dinger/dinger.png" id="2_3wdlg"]
[ext_resource type="Script" path="res://scripts/PlayerJump.gd" id="2_yratf"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="3_wvmkk"]
[ext_resource type="Script" path="res://scripts/PlayerMove.gd" id="4_0jfnu"]
[ext_resource type="Script" path="res://scripts/PlayerIdle.gd" id="4_h5344"]
[ext_resource type="Script" path="res://scripts/PlayerFall.gd" id="6_jqk27"]
[ext_resource type="Script" path="res://PlayerDash.gd" id="9_308si"]
[ext_resource type="Script" path="res://scripts/Camera2D.gd" id="9_eh782"]

[sub_resource type="AtlasTexture" id="AtlasTexture_acl86"]
atlas = ExtResource("2_3wdlg")
region = Rect2(0, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iyn4"]
atlas = ExtResource("2_3wdlg")
region = Rect2(8, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8dqr"]
atlas = ExtResource("2_3wdlg")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6yg3"]
atlas = ExtResource("2_3wdlg")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w5te"]
atlas = ExtResource("2_3wdlg")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j7ar"]
atlas = ExtResource("2_3wdlg")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7dmk"]
atlas = ExtResource("2_3wdlg")
region = Rect2(0, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayny2"]
atlas = ExtResource("2_3wdlg")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyj5d"]
atlas = ExtResource("2_3wdlg")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxqos"]
atlas = ExtResource("2_3wdlg")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fypjo"]
atlas = ExtResource("2_3wdlg")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qp0f"]
atlas = ExtResource("2_3wdlg")
region = Rect2(24, 8, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_pht7v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_acl86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iyn4")
}],
"loop": false,
"name": &"dinger_dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8dqr")
}],
"loop": true,
"name": &"dinger_fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6yg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w5te")
}],
"loop": true,
"name": &"dinger_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j7ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7dmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayny2")
}],
"loop": false,
"name": &"dinger_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyj5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxqos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fypjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qp0f")
}],
"loop": true,
"name": &"dinger_walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyrj0"]
size = Vector2(16, 16)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ilmqr"]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(4, 4)
script = ExtResource("1_4mqlj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 7
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pht7v")
animation = &"dinger_fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uyrj0")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_wvmkk")
initial_state = NodePath("PlayerIdle")

[node name="PlayerIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player")]
script = ExtResource("4_h5344")
Player = NodePath("../..")

[node name="PlayerMove" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player")]
script = ExtResource("4_0jfnu")
Player = NodePath("../..")

[node name="PlayerJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player")]
script = ExtResource("2_yratf")
Player = NodePath("../..")

[node name="PlayerFall" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player")]
script = ExtResource("6_jqk27")
Player = NodePath("../..")

[node name="PlayerDash" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player")]
script = ExtResource("9_308si")
Player = NodePath("../..")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-0.5, 0.5)
scale = Vector2(0.25, 0.25)
zoom = Vector2(2, 2)
script = ExtResource("9_eh782")

[node name="DashTimer" type="Timer" parent="."]

[node name="RigidBody2D" type="RigidBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_ilmqr")

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
